make skeleton links work & proc to add
Changed links and filenames until the link system works.

Wrote procedure to add new recipes in index.html

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -7,6 +7,7 @@
     <title>"Crepe Lasanga"</title>
 </head>
 <body>
+    <a href="../index.html">Return to Index</a>
     <h1>Crepe Lasangna</h1>
     <img src="Graphics/lasagna.jpeg"      
          alt="picture of a single serving dish of lasagna">    
@@ -85,7 +86,7 @@
         </li>
 
     </ol>
-
+    <a href="../index.html">Return to Index</a>
 </body>
 
 </html>
