--- a/Recipes/Banana Bread.html
+++ b/Recipes/Banana Bread.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tab Title</title>
+    <title>Banana Bread</title>
 </head>
 <body>
     <a href="../index.html">Return to Index</a>
-    <h1>Recipe Name</h1>
+    <h1>Banana Bread</h1>
     <img src="../Recipes/Graphics/mochi.jpg"
          alt="describe picture"
         >
