file renaming so GitHub can publish

--- a/index.html
+++ b/index.html
@@ -8,25 +8,44 @@
 
 </head>
 <body>
+
+
     <h1>Recipes</h1>
     <p>
-        
+        <-- 
+This should work as a comment header for this file.  This is the root of the orion-recipies project.
+Here is the directory structure it depends on as of 11/19/2022
+
+odin-recipies | index.html
+              | README.md == Journal.md
+              | LICENSE
+              --| recipes --| Banana_Bread.html 
+                            | CoffeeCake.html 
+                            | lasagna.html 
+                            --| resources -- | index.html =symbolic= ../index.html (template link)
+                                              --| templates -- | recipe.template.html
+                                              --| graphics  -- | lasagna.jpeg 
+                                                              | mochi.jpg
+-->
+
     </p>
     <ul>
         <li>
-            <a href=".template/recipe.template.html">Template</a>
+            <a href="recipes/resources/templates/recipe.template.html">Template</a>
         </li>
         <li>
-            <a href="Recipes/lasagna.html">No Noodle Lasagna</a>
+            <a href="recipes/lasagna.html">No Noodle Lasagna</a>
         </li>
         <li>
-            <a href="Recipes/Banana Bread.html">Banana Bread</a>
+            <a href="recipes/Banana_Bread.html">Banana Bread</a>
         </li>
 		<li>
-			<a href="Recipes/CoffeeCake.html">Simple Coffee Cake</a>
+			<a href="recipes/CoffeeCake.html">Simple Coffee Cake</a>
 		</li>
     </ul>
-    <h2>
+
+<--
+<h2>
         Adding Recipes
     </h2>    
     <h3>Make a template file</h3>
@@ -60,6 +79,10 @@
 <h3>To do:</h3>
     <p>
         Make button to query for recipe name, then make template and link with boilerplate filled out
-    </p>
+    </p> -->
+
+
+
+
 </body>    
 </html>
