Added requirements.text, made DOC directory and moved text files other than README into it.

--- a/recipes/CoffeeCake.html
+++ b/recipes/CoffeeCake.html
@@ -9,7 +9,7 @@
 <body>
     <a href="../index.html">Return to Index</a>
     <h1>Basic Coffee Cake</h1>
-    <img src="../Recipes/Graphics/mochi.jpg"
+    <img src="resources/graphics/mochi.jpg"
          alt="describe picture"
         >
     <h2>Description</h2>
