--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,7 +9,7 @@
 <body>
     <a href="../index.html">Return to Index</a>
     <h1>Crepe Lasangna</h1>
-    <img src="Graphics/lasagna.jpeg"      
+    <img src="resources/graphics/lasagna.jpeg"      
          alt="picture of a single serving dish of lasagna">    
     <h2>Description:</h2>
     <p>
