--- a/recipes/Banana_Bread.html
+++ b/recipes/Banana_Bread.html
@@ -9,8 +9,8 @@
 <body>
     <a href="../index.html">Return to Index</a>
     <h1>Banana Bread</h1>
-    <img src="../Recipes/Graphics/mochi.jpg"
-         alt="describe picture"
+    <img src="resources/graphics/mochi.jpg"
+         alt="holding for picture"
         >
     <h2>Description</h2>
     <p>
