--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +13,8 @@
 
     <h1>Recipes</h1>
     <p>
-        <-- 
+        before >
+        <!-- 
 This should work as a comment header for this file.  This is the root of the orion-recipies project.
 Here is the directory structure it depends on as of 11/19/2022
 
@@ -27,7 +29,7 @@ odin-recipies | index.html
                                               --| graphics  -- | lasagna.jpeg 
                                                               | mochi.jpg
 -->
-
+        < after 
     </p>
     <ul>
         <li>
