format index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,29 @@
 <!DOCTYPE html>
+<!--
+This is the root of my odin-recipies project. I keep moving things around.
+Here is the directory structure as of 11/20/2022
+
+odin-recipies   
+    |- index.html        **       ---- root of this document directory tree, name not optional.
+    |- README.md 
+    |- LICENSE
+    |
+   -|- recipes |               --------- perhaps contents would be better?
+        |- Banana_Bread.html                 
+        |- CoffeeCake.html 
+        |- lasagna.html
+        | 
+      --|- resources |
+              |
+            --|- templates |
+              |    |
+              |    |- recipe.template.html
+              |                                
+            --|- graphics |
+                    | 
+                    |- lasagna.jpeg 
+                    |- mochi.jpg
+-->
 <html lang="en">
 <head>
     
@@ -12,23 +37,7 @@
 
 
     <h1>Recipes</h1>
-    <p>
-        before >
-        <!-- 
-This should work as a comment header for this file.  This is the root of the orion-recipies project.
-Here is the directory structure it depends on as of 11/19/2022
 
-odin-recipies | index.html
-              | README.md == Journal.md
-              | LICENSE
-              --| recipes --| Banana_Bread.html 
-                            | CoffeeCake.html 
-                            | lasagna.html 
-                            --| resources -- | index.html =symbolic= ../index.html (template link)
-                                              --| templates -- | recipe.template.html
-                                              --| graphics  -- | lasagna.jpeg 
-                                                              | mochi.jpg
--->
         < after 
     </p>
     <ul>
