Filled out recipe details on Banana Bread recipe

--- a/recipes/Banana_Bread.html
+++ b/recipes/Banana_Bread.html
@@ -14,22 +14,33 @@
         >
     <h2>Description</h2>
     <p>
-        Concisely describe recipe's results.
+        Makes 1 loaf, approx 1 lb.
     </p>
     <h2>Ingredients</h2>
         <ul>
-            <li>first</li>
-            <li>...</li>
-            <li>last</li>
+            <li>1/2 cup shortning</li>
+            <li>1 cup sugar</li>
+            <li>2 eggs</li>
+            <li>1 cup mashed bananas</li>
+            <li>1 teaspoon lemon juice</li>
+            <li>2 cups SIFTED flour</li>
+            <li>3 teaspoons baking powder</li>
+            <li>1/2 teaspoon salt</li>
+            <li>1 cup chopped nut meats</li>
         </ul>
+        
     <h2>Steps</h2>
         <ol>
-            <li>first</li>
-            <li>...</li>
-            <li>last</li>
+            <li>Cream shortening and sugar together</li>
+            <li>Beat eggs until light and add to s&s</li>
+            <li>Mix lemon juice with banana pulp and add</li>
+            <li>Whisk dry ingredients together and add</li>
+            <li>Mix lightly and turn into greased loaf pan</li>
+            <li>Bake ~ 75 minutes @ 375 F</li>
         </ol>
-    <h2>Closing Remarks</h2>
-    <p>Optional</p>
+    <h2>Notes</h2>
+    <p>Be sure to keep flour fluffed up when measuring.  I used 1/2 cup rye grain and 1/2 cup wheatberries ground together and had a lot left over. 
+It made a delicious loaf.</p>
     <a href="../index.html">Return to Index</a>
 
     
