--- a/recipes/CoffeeCake.html
+++ b/recipes/CoffeeCake.html
@@ -35,7 +35,7 @@
             <li>2 tablespoons sugar</li>
             <li>1/4 cup sifted flour</li>
             <li>1/4 cup dry bread crumbs</li>
-            <li>1/2 teaspoon cinnamon</li><li>first</li>
+            <li>1/2 teaspoon cinnamon</li>
         </ul>
     
     
