Added doughnut recipe

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ odin-recipies
     </p>
     <ul>
         <li>
-            <a href="recipes/resources/templates/recipe.template.html">Template</a>
+            <a href="recipes/Doughnuts.html">Doughnuts</a>
         </li>
         <li>
             <a href="recipes/lasagna.html">No Noodle Lasagna</a>
