--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@ odin-recipies
     </p>
     <ul>
         <li>
-            <a href="recipes/Doughnuts.html">Doughnuts</a>
+            <a href="./recipes/Doughnuts.html">Doughnuts</a>
         </li>
         <li>
-            <a href="recipes/lasagna.html">No Noodle Lasagna</a>
+            <a href="./recipes/lasagna.html">No Noodle Lasagna</a>
         </li>
         <li>
-            <a href="recipes/Banana_Bread.html">Banana Bread</a>
+            <a href="./recipes/Banana_Bread.html">Banana Bread</a>
         </li>
 		<li>
-			<a href="recipes/CoffeeCake.html">Simple Coffee Cake</a>
+			<a href="./recipes/CoffeeCake.html">Simple Coffee Cake</a>
 		</li>
     </ul>
 
