--- a/recipes/CoffeeCake.html
+++ b/recipes/CoffeeCake.html
@@ -7,7 +7,7 @@
     <title>Coffee Cake</title>
 </head>
 <body>
-    <a href="../index.html">Return to Index</a>
+    <button><a href="../index.html">Return to Index</a></button>
     <h1>Quick Coffee Cake</h1>
     <img src="resources/graphics/mochi.jpg"
          alt="describe picture"
@@ -57,7 +57,7 @@
         </ol>
     <h2>Notes</h2>
     <p>Haven't tried the breadcrumbs in topping yet.  Next time.</p>
-    <a href="../index.html">Return to Index</a>
+    <button><a href="../index.html">Return to Index</a></button>
 
     
 </body>
