--- a/recipes/Doughnuts.html
+++ b/recipes/Doughnuts.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doughnuts</title>
+
+    <link type="stylesheet" href="recipes.css">
+
 </head>
 <body>
-    <a href="../index.html">Return to Index</a>
+    <button><a href="../index.html">Return to Index</a></button>
     <h1>Doughnuts</h1>
-    <img src="resources/graphics/mochi.jpg"
+    <img src="resources/graphics/donuts-air.jpg"
          alt="describe picture"
         >
     <h2>Description</h2>
@@ -42,8 +45,7 @@ I want to try in the air fryer. </p>
         </ol>
     <h2>Notes</h2>
     <p>I plan on trying this in air fryer.</p>
-    <a href="../index.html">Return to Index</a>
-
+    <button><a href="../index.html">Return to Index</a></button>
     
 </body>
 </html>
