--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
     <title>"Crepe Lasanga"</title>
 </head>
 <body>
-    <a href="../index.html">Return to Index</a>
+    <button><a href="../index.html">Return to Index</a></button>
     <h1>Crepe Lasangna</h1>
     <img src="resources/graphics/lasagna.jpeg"      
          alt="picture of a single serving dish of lasagna">    
@@ -86,7 +86,7 @@
         </li>
 
     </ol>
-    <a href="../index.html">Return to Index</a>
+    <button><a href="../index.html">Return to Index</a></button>
 </body>
 
 </html>
