--- a/recipes/stargazy-pie.html
+++ b/recipes/stargazy-pie.html
@@ -4,15 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tab Title</title>
-    <link rel="stylesheet" href="recipes.css">
+    <title>Stargazy Pie</title>
 
+    <!-- <link rel="stylesheet" href="./recipes.css">-->
+    <style>img {
+        width:100;
+        height:auto;
+    } </style> 
+    
 </head>
 <body>
     <button><a href="../index.html">Return to Index</a></button>
-    <h1>Recipe Name</h1>
-    <img src="../Recipes/Graphics/mochi.jpg"
-         alt="describe picture"
+    <h1>Stargazy Pie</h1>
+    <img src="resources/graphics/stargazy_pie.jpg"
+         alt="A pie with fish heads sticking out"
         >
     <h2>Description</h2>
     <p>
@@ -33,6 +38,7 @@
     <h2>Closing Remarks</h2>
     <p>Optional</p>
     <button><a href="../index.html">Return to Index</a></button>
+
     
 </body>
 </html>
