Updated files, reworked adding directons

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>"Crepe Lasanga"</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Pasta-Free Lasagna</title>
+        <link rel="stylesheet" href="recipes.css">
+    </head>
 <body>
     <button><a href="../index.html">Return to Index</a></button>
-    <h1>Crepe Lasangna</h1>
+    <h1>Pasta-Free Lasangna</h1>
     <img src="resources/graphics/lasagna.jpeg"      
          alt="picture of a single serving dish of lasagna">    
     <h2>Description:</h2>
     <p>
-        This is not made with purchased noodles.  It's made with pancakes
+        This is not made with purchased noodles.  It's made with crepes
+        (unleavened pancakes)
         that have a very similar flavor.
     </p>
     <h2>Ingredients:</h2>
