--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -1,13 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+   <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Doughnuts</title>
-
-    <link type="stylesheet" href="recipes.css">
-
+    <title>"Air-fry Donuts"</title>
+    <link rel="stylesheet" href="recipes.css">
 </head>
 <body>
     <button><a href="../index.html">Return to Index</a></button>
