--- a/recipes/stargazy-pie.html
+++ b/recipes/stargazy-pie.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stargazy Pie</title>
-
-    <!-- <link rel="stylesheet" href="./recipes.css">-->
-    <style>img {
-        width:100;
-        height:auto;
-    } </style> 
-    
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Banana Bread</title>
+        <link rel="stylesheet" href="recipes.css">
+    </head>
 <body>
     <button><a href="../index.html">Return to Index</a></button>
     <h1>Stargazy Pie</h1>
