Edited donuts page, played with css

--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -15,8 +15,12 @@
         >
     <h2>Description</h2>
     <p>
-I have not yet tried this recipe.  Will try to remember to do so when I try it.  
-I want to try in the air fryer. </p>
+I have tried this recipe in an air fryer.  The recipe I got was
+for conventional deep frying.    Will try to remember to do so when I try it.  
+</p>
+<p>
+    <div>
+
     <h2>Ingredients</h2>
         <ul>
             <li>1 cup sugar</li>
@@ -29,6 +33,24 @@ I want to try in the air fryer. </p>
             <li>1/2 teaspoon nutmeg</li>
             <li>1 cup milk</li>
         </ul>
+    </div>   
+</p>
+    <div>
+        <h2>Half Portions and Changes</h2>
+        <ul>
+            <li>1/2 cup sugar</li>
+            <li>1 tablespoon melted butter</li>
+            <li>1 eggs</li>
+            <li>2 cups sifted flour -- 
+                <p>I ground 170 grams of mixed rye and wheat and 
+                    added multipurpose flour to 260 grams total flour</p></li>
+            <li>2 teaspoons baking powder</li>
+            <li>a pinch of salt</li>
+            <li>1/4 teaspoon cinnamon</li>
+            <li>1/4 teaspoon allspice</li>
+            <li>1/2 cup milk</li>            
+        </ul>
+    </div>
     <h2>Steps</h2>
         <ol>
             <li>Heat oil to 360-370 F</li>
