--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -19,7 +19,7 @@ I have tried this recipe in an air fryer.  The recipe I got was
 for conventional deep frying.    Will try to remember to do so when I try it.  
 </p>
 <p>
-    <div>
+    <span>
 
     <h2>Ingredients</h2>
         <ul>
@@ -33,9 +33,9 @@ for conventional deep frying.    Will try to remember to do so when I try it.
             <li>1/2 teaspoon nutmeg</li>
             <li>1 cup milk</li>
         </ul>
-    </div>   
+    </span>   
 </p>
-    <div>
+    <span>
         <h2>Half Portions and Changes</h2>
         <ul>
             <li>1/2 cup sugar</li>
@@ -50,7 +50,7 @@ for conventional deep frying.    Will try to remember to do so when I try it.
             <li>1/4 teaspoon allspice</li>
             <li>1/2 cup milk</li>            
         </ul>
-    </div>
+    </span>
     <h2>Steps</h2>
         <ol>
             <li>Heat oil to 360-370 F</li>
