edited donuts page

--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -11,22 +11,36 @@
     <button><a href="../index.html">Return to Index</a></button>
     <h1>Doughnuts</h1>
     <img src="resources/graphics/donuts-air.jpg"
-         alt="describe picture"
+         alt="round plate of stuff"
         >
     <h2>Description</h2>
-    <p>
-I have tried this recipe in an air fryer.  The recipe I got was
-for conventional deep frying.    Will try to remember to do so when I try it.  
-</p>
-<p>
+    </p><p> 
+    The experiments I've done have been interesting.  Flatter
+    than I had hoped, but with a soft interior and a very thin 
+    crunchy outside.  Pretty close to the cake donuts I'd hoped
+    for.
+    </p><p> 
+    The next batch, I'll try for 1/2 thickness, then cut.
+    I'm thinking of something like dowels or such.
+
+
+
+    </p> 
+
     <span>
 
     <h2>Ingredients</h2>
         <ul>
             <li>1 cup sugar</li>
-            <li>2 tablespoons melted shortning</li>
+            <li>2 tablespoons melted butter</li>
             <li>2 eggs</li>
-            <li>4 cups sifted flour</li>
+            <li>4 cups sifted flour<br>
+                <pre>
+                    260 grams clean wheat kernels
+                    260 grams clean rye kernels
+                    ground to very fine flour
+                </pre>
+            </li>
             <li>4 teaspoons baking powder</li>
             <li>1/4 teaspoon salt</li>
             <li>1/2 teaspoon cinnamon</li>
@@ -53,18 +67,46 @@ for conventional deep frying.    Will try to remember to do so when I try it.
     </span>
     <h2>Steps</h2>
         <ol>
-            <li>Heat oil to 360-370 F</li>
+            <li>preheat airfryer to 425 F</li>
             <li>Add sugar to melted shortning and beat thoroughly</li>
             <li>Beat eggs and add to sugar</li>
             <li>Whisk dry ingredients together</li>
             <li>Alternately add portions of dry ingredients then milk until done</li>
             <li>Roll 1/4 inch thick on floured surface.  Refrigerate if too soft</li>
             <li>Cut with doughnut cutter</li>
-            <li>Fry a few at a time in deep fat (360 F), turning once</li>
+            <li>
+                Fry well-spaced batches until browned --
+                somewhere in 5 minute range
+            </li>
             <li>Drain and frost.</li>
         </ol>
     <h2>Notes</h2>
-    <p>I plan on trying this in air fryer.</p>
+
+
+    <p>
+        This recipe makes a very soft and tender dough that you can roll out 
+        to thickness, then cut out the donuts and holes.  These were meant
+        to float in the hot fat while they fried, but since we have to deal
+        with gravity in the air fryer, you should be able to flour the 
+        bottoms and slip them into the basket, right?
+    </p><p>
+
+        The dough is soft enough to ooze slightly through the holes
+        in the basket and form millions of little brown crusty nuggets
+        that you have to remove before the experimental donuts can be
+        released from the mesh.
+    </p>
+    <p>I am currently experimenting with this recipe in my Air-fry 
+        tabletop oven.  It's a lot smaller than our currently nonfunctional
+        antique gas oven. It's fine for 2 person portions, so I'm 
+        pleased with it so far.
+    </p><p>
+        My starting recipe for these donuts was taken from an unknown
+        cookbook, guessing from illustration style, from 1930 - 1950.
+        My guess would be late 30's, just before WWII.
+</p>
+
+    
     <button><a href="../index.html">Return to Index</a></button>
     
 </body>
