Edit donut file

--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -22,6 +22,20 @@
     </p><p> 
     The next batch, I'll try for 1/2 thickness, then cut.
     I'm thinking of something like dowels or such.
+    </p><p> 
+    Third batch I made a full batch, using the liquid
+    from some cans of sweet potato instead of milk.
+</p><p> 
+    I had to add more liquid as 1 cup left the dough
+    very stiff.  I got it to a very soft, slightly
+    sticky stage.  Rolled to 1/2 inch thick and gently
+    cut the donuts.  I baked them on oiled parchment and
+    oiled the donuts before cooking.
+</p><p> 
+    This variation is much closer to the deep-fry 
+    variety.  Texture is much like a cake donut.
+    The crumb looks like I remember home fried
+    donuts looked when I'd break one open.
 
 
 
@@ -34,7 +48,7 @@
             <li>1 cup sugar</li>
             <li>2 tablespoons melted butter</li>
             <li>2 eggs</li>
-            <li>4 cups sifted flour<br>
+        <var></var>    <li>4 cups sifted flour<br>
                 <pre>
                     260 grams clean wheat kernels
                     260 grams clean rye kernels
