Added raised donuts and tweaked buttons

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ odin-recipies
             </button>
         </li>
         <li>
+            <button class="tested">
+                <a href="./recipes/af_risen_donuts.html">Air-Fry Risen Donuts</a>
+            </button>
+        </li>
+        <li>
             <button class="untested">
                 <a href="./recipes/lasagna.html">Pasta-Free Lasagna</a>
             </button>
@@ -83,12 +88,12 @@ odin-recipies
             </button>
         </li>
 		<li>
-            <button>
+            <button class="tested">
 			    <a href="./recipes/CoffeeCake.html">Simple Coffee Cake</a>
             </button>
 		</li>
         <li>
-            <button>
+            <button class=untested>
 			    <a href="./recipes/stargazy-pie.html">Stargazy Pie</a>
             </button>
 		</li>
