--- a/recipes/CoffeeCake.html
+++ b/recipes/CoffeeCake.html
@@ -16,12 +16,17 @@
     <h2>Description</h2>
     <p>
         Makes one 9 inch x 9 inch coffeecake
+    </p><p>
+
+        This is a good, basic coffee cake -- it's easy to modtfy,
+        just add in a cup or so of your flavoring. I like frozen
+        blueberries, for example.
     </p>
     <h2>Ingredients</h2>
 
     <h3>Basic Cake</h3>
         <ul>
-            <li>1 1/2 cups sifted flour</li>
+            <li>1 1/2 cups sifted flour  -- 195 grams grain</li>
             <li>1/2 cup sugar</li>
             <li>2 teaspoons baking powder</li>
            <li>1/2 teaspoon salt</li>
@@ -34,7 +39,7 @@
         <ul>
             <li>2 tablespoons butter</li>
             <li>2 tablespoons sugar</li>
-            <li>1/4 cup sifted flour</li>
+            <li>1/4 cup sifted flour -- 32 1/2  grams grain</li> 
             <li>1/4 cup dry bread crumbs</li>
             <li>1/2 teaspoon cinnamon</li>
         </ul>
@@ -43,6 +48,13 @@
 
     <h2>Steps</h2>
         <ol>
+            <li>
+                grind 227.5 grams of grain.<br>
+                32.5 grams go to topping<br>
+                195 grams go to the cake itself 
+                <em>-- I like rye and wheat mixed and ground
+                   together.</em>
+            </li>
             <li>
                 Prepare Crumb topping by creaming 2 tablespoons each of butter 
                 and sugar, then mixing in the flour, crumbs, and cinnamon. 
