--- a/recipes/air-fry_donuts.html
+++ b/recipes/air-fry_donuts.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"Air-fry Donuts"</title>
-    <link rel="stylesheet" href="recipes.css">
+    <link rel="stylesheet" href="./recipes.css">
 </head>
 <body>
     <button><a href="../index.html">Return to Index</a></button>
     <h1>Doughnuts</h1>
-    <img src="resources/graphics/donuts-air.jpg"
+    <img src="./resources/"
          alt="round plate of stuff"
         >
     <h2>Description</h2>
