Formatting af-donuts

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ odin-recipies
     <ul>
         <li>
             <button class="tested">
-                <a href="./recipes/air-fry_donuts.html">Air-Fry Donuts</a>
+                <a href="./recipes/air-fry_donuts.html">Air-Fry Cake Donuts</a>
             </button>
         </li>
         <li>
